--- a/public/assets/css/dash_prestataires.css
+++ b/public/assets/css/dash_prestataires.css
@@ -1,88 +1,105 @@
-.infos {
+.pro .infos-projets {
     position: relative;
     top: 0%;
     width: 100%;
-    margin: 90px 0 100px;
+    margin: 90px 0 0;
     padding: 0;
-    height: 100px;
+    height: 80px;
     background: #009EE2;
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 32px rgba(0, 0, 0, 0.16);
 }
-.infos .rectangle-profil {
+
+.pro .infos-projets .rectangle-profil {
     position: absolute;
-    top: 20%;
-    left: 6%;
-    width: 150px;
-    height: 150px;
+    top: 15%;
+    left: 5%;
+    width: 130px;
+    height: 130px;
     background: #FFFFFF;
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
     border-radius: 20px;
 }
-.infos .rectangle-profil .rectanggle-bleu {
+
+.pro .infos-projets .rectangle-profil .rectanggle-bleu {
     position: absolute;
-    top: 6.5%;
-    left: 6.5%;
+    top: 8%;
+    left: 8%;
     margin: auto;
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
     background: #009EE2;
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
     border-radius: 20px;
 }
-.infos .rectangle-profil .rectanggle-bleu img {
+
+.pro .infos-projets .rectangle-profil .rectanggle-bleu img {
     position: absolute;
-    top: 20%;
+    top: 22%;
     /* margin: auto; */
-    left: 20%;
-    width: 80px;
-    height: 80px;
+    left: 22%;
+    width: 60px;
+    height: 60px;
     border-radius: 50px;
 }
+
+
 @media(max-width: 990px) {
-    .infos .rectangle-profil {
+
+    .pro .infos-projets .rectangle-profil {
         left: 4%;
         width: 115px;
         height: 115px;
     }
-    .infos .rectangle-profil .rectanggle-bleu {
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu {
+        top: 11%;
+        left: 11%;
         margin: auto;
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
     }
-    .infos .rectangle-profil .rectanggle-bleu img {
-        width: 60px;
-        height: 60px;
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu img {
+        width: 50px;
+        height: 50px;
     }
 }
+
 @media(max-width: 600px) {
-    .infos .rectangle-profil {
+    .pro .infos-projets .rectangle-profil {
         width: 100px;
         height: 100px;
     }
-    .infos .rectangle-profil .rectanggle-bleu {
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu {
         left: 8%;
         margin: auto;
         width: 85px;
         height: 85px;
     }
-    .infos .rectangle-profil .rectanggle-bleu img {
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu img {
         width: 50px;
         height: 50px;
     }
 }
+
 @media(max-width: 550px) {
-    .infos {
-        margin: 40px 0 100px;
+
+    .pro .infos-projets {
+        margin: 65px 0 0;
         padding: 0;
         height: 50px;
     }
-    .infos .rectangle-profil {
+
+    .pro .infos-projets .rectangle-profil {
         width: 60px;
         left: 8%;
         height: 60px;
         border-radius: 10px;
     }
-    .infos .rectangle-profil .rectanggle-bleu {
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu {
         left: 8.5%;
         top: 8%;
         margin: auto;
@@ -90,14 +107,19 @@
         height: 50px;
         border-radius: 10px;
     }
-    .infos .rectangle-profil .rectanggle-bleu img {
+
+    .pro .infos-projets .rectangle-profil .rectanggle-bleu img {
+        left: 22%;
+        top: 20%;
         width: 30px;
         height: 30px;
     }
+
 }
+
 @media (max-width: 400px) {
-    .infos {
-        margin: 33px 0 100px;
+    .pro .infos-projets {
+        margin: 58px 0 0;
         padding: 0;
         height: 50px;
     }
