--- a/public/assets/css/depot-projet.css
+++ b/public/assets/css/depot-projet.css
@@ -180,7 +180,7 @@
 /* Upload file css */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 
-.depot .row form .dropzone {
+form .depot .row .dropzone {
     width: 100%;
     height: auto;
     border: 1px dashed #999;
@@ -188,14 +188,14 @@
     text-align: center;
 }
 
-.depot .row form .upload-icon {
+form .depot .row .upload-icon {
     margin: 25px 2px;
 }
 
-.depot .row form .dropzone>input {
+form .depot .row .dropzone>input {
     display: none;
 }
-.depot .row form .dropzone .upload-input {
+form .depot .row .dropzone .upload-input {
     position: relative;
     width: 100%;
     height: 100%;
@@ -204,24 +204,24 @@
 
 /* Upload file css fin */
 
-.depot .row form .apres-upload {
+form .depot .row .apres-upload {
     width: 100%;
     display: flex;
     margin: auto;
 }
 
-.depot .row form .form-check {
+form .depot .row .form-check {
     margin: 20px 0;
 }
 
-.depot .row form .form-check input {
+form .depot .row .form-check input {
     border-radius: 50px;
     width: 30px;
     margin-right: 5px;
     height: 30px;
 }
 
-.depot .row form .apres-upload .col-md-4 p {
+form .depot .row .apres-upload .col-md-4 p {
     display: flex;
     margin: 0;
     padding: 5px 0;
@@ -229,7 +229,7 @@
     align-items: center;
 }
 
-.depot .row form .form-check label {
+form .depot .row .form-check label {
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 700;
@@ -242,11 +242,11 @@
     color: #009EE2;
 }
 
-.depot .row form .form-check label span {
+form .depot .row .form-check label span {
     color: #394149;
 }
 
-.depot .row form .sauvegarde {
+form .depot .row .sauvegarde {
     background: #009EE2;
     border-radius: 10px;
     border: none;
@@ -265,7 +265,7 @@
     color: #FFFFFF;
 }
 
-.depot .row form .valider {
+form .depot .row .valider {
     margin-top: 50px;
     background: #FFFFFF;
     border-radius: 10px;
@@ -281,11 +281,36 @@
     color: #009EE2;
 }
 
-@media(max-width: 1110px) {
+@media(max-width: 1050px) {
     .depot-projet h4,
     .depot-projet .depot .zip a {
         font-size: 15px;
         line-height: 20px;
+    }
+
+    .create-projet h1 {
+        width: 100%;
+        margin: -80px auto 20px auto;
+        font-size: 25px;
+        line-height: 32px;
+    }
+    .infos-projets {
+        height: 90px;
+    }
+
+    .infos-projets .rectangle-profil {
+        width: 140px;
+        height: 140px;
+    }
+
+    .infos-projets .rectangle-profil .rectanggle-bleu {
+        width: 122px;
+        height: 122px;
+    }
+
+    .infos-projets .rectangle-profil .rectanggle-bleu img {
+        width: 70px;
+        height: 70px;
     }
 }
 
@@ -348,9 +373,9 @@
        width: 100%;
        margin: 0;
    }
-    .depot .row form .form-check label,
-    .depot .row form .apres-upload .col-md-4 p,
-    .depot .row form .dropzone p,
+    form .depot .row .form-check label,
+    form .depot .row .apres-upload .col-md-4 p,
+    form .depot .row .dropzone p,
    .depot .row .col-md-12 .col-md-6 .btn,
     .depot-projet h4,
     .depot-projet .depot .zip,
@@ -359,7 +384,7 @@
         font-size: 12px;
         line-height: 15px;
     }
-    .depot .row form .form-check input {
+    form .depot .row .form-check input {
         width: 20px;
         height: 20px;
     }
@@ -374,7 +399,7 @@
         line-height: 15px;
     }
 
-    .depot .row form .form-check input {
+    form .depot .row .form-check input {
         width: 20px;
         height: 20px;
     }
@@ -408,13 +433,13 @@
         height: 30px;
     }
 
-    .depot .row form .upload-icon {
+    form .depot .row .upload-icon {
         width: 20px;
         height: 20px;
     }
-    .depot .row form .form-check label,
-    .depot .row form .apres-upload .col-md-4 p,
-    .depot .row form .dropzone p,
+    form .depot .row .form-check label,
+    form .depot .row .apres-upload .col-md-4 p,
+    form .depot .row .dropzone p,
    .depot .row .col-md-12 .col-md-6 .btn,
     .depot-projet h4,
     .depot-projet .depot .zip,
@@ -422,10 +447,10 @@
         font-size: 10px;
         line-height: 15px;
     }
-    .depot .row form .dropzone p {
+    form .depot .row .dropzone p {
         margin: 0;
     }
-    .depot .row form .form-check input {
+    form .depot .row .form-check input {
         width: 15px;
         height: 15px;
     }
@@ -444,7 +469,7 @@
     .depot-projet .depot .zip a {
         padding: 1px;
     }
-    .depot .row form .form-check {
+    form .depot .row .form-check {
         margin: 0;
     }
     .depot-projet h4{
