--- a/public/assets/css/factures.css
+++ b/public/assets/css/factures.css
@@ -10,6 +10,7 @@
     background: #009EE2;
     height: 50px;
 }
+
 .input input {
     border: none;
     height: 30px;
@@ -26,6 +27,20 @@
     text-align: center;
     background: none;
 }
+
+.table-responsive .table thead {
+    border: 1px solid #9A9EA3;
+}
+
+.table-responsive .table thead tr th,
+.table-responsive .table tbody tr td {
+    vertical-align: middle;
+    border-top: none;
+    border-right: 1px solid #9A9EA3;
+    border-left: 1px solid #9A9EA3;
+}
+
+.table-responsive .table tbody tr td button,
 .table-responsive .table tbody tr {
     font-family: 'Ubuntu';
     font-size: 15px;
@@ -34,6 +49,7 @@
     letter-spacing: -0.02em;
     text-align: center;
 }
+
 .dataTables_paginate .pagination {
     display: flex;
     justify-content: end;
@@ -46,5 +62,151 @@
 }
 
 .main-content main .col-sm-12 .m-0 {
-    margin: 30px 0 !important;
+    margin: 30px 0 40px !important;
+}
+
+.factures .modal .modal-dialog {
+    display: flex;
+    background: #7f3c3c;
+    margin-top: 210px;
+    margin-right: 220px;
+    min-height: 200px;
+}
+
+.factures .modal .modal-dialog .modal-content {
+    padding: 0 20px;
+}
+
+.factures .modal .modal-dialog .modal-content .col-md-12 {
+    padding: 5px 0;
+}
+
+.factures .modal .modal-dialog .modal-content label {
+    color: #009EE2;
+    text-align: center;
+    font-size: 13px;
+    font-family: 'Manrope';
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -0.26px;
+}
+
+
+.factures .modal .modal-dialog .modal-content .form-control {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #009EE2;
+
+    color: rgba(0, 0, 0, 0.25);
+    font-size: 13px;
+    font-family: 'Manrope';
+    line-height: 32px;
+    letter-spacing: -0.26px;
+}
+
+.factures .modal .modal-dialog .modal-content .except {
+    border-radius: 10px;
+    background: #009EE2;
+    padding: 0;
+    width: 100px;
+    margin: 0;
+}
+
+.factures .modal .modal-dialog .modal-content .except .nouveau-projet {
+    color: #FFF;
+    font-size: 13px;
+    font-family: 'Manrope';
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -0.26px;
+    ;
+    padding: 5px 30px;
+    margin: 0;
+}
+
+@media(max-width: 1050px) {
+    .factures .modal .modal-dialog {
+        margin-top: 50px;
+    }
+
+    .main-content main .col-sm-12 .m-0 {
+        margin: 10px 0 30px !important;
+    }
+}
+
+@media(max-width: 990px) {
+    .factures .modal .modal-dialog {
+        margin-top: 220px;
+    }
+
+    .factures .modal .modal-dialog .modal-content .form-control {
+        margin-left: 0;
+    }
+
+}
+
+@media(max-width: 600px) {
+    .factures .modal .modal-dialog {
+        max-width: 70%;
+    }
+
+    .factures .modal .modal-dialog .modal-content .col-md-12 {
+        padding: 0;
+    }
+}
+
+@media(max-width: 550px) {
+    .input {
+        height: 40px;
+    }
+
+    .input input {
+        border: none;
+        font-size: 12px;
+        height: 20px;
+    }
+
+    .main-content main .col-sm-12 .m-0 {
+        margin: 0 0 20px !important;
+    }
+
+    .table-responsive .table thead tr th {
+        font-size: 10px;
+        line-height: 20px;
+    }
+
+    .table-responsive .table tbody tr td button {
+        padding: 2px;
+    }
+
+    .table-responsive .table tbody tr td button,
+    .table-responsive .table tbody tr {
+        font-size: 10px;
+        line-height: 15px;
+    }
+
+    .factures .modal .modal-dialog .modal-content {
+        padding: 10px 20px 0;
+    }
+
+    .factures .modal .modal-dialog {
+        margin: 150px auto 0;
+    }
+
+    .factures .modal .modal-dialog .modal-content label {
+        font-size: 10px;
+        line-height: 22px;
+    }
+
+    .factures .modal .modal-dialog .modal-content .except .nouveau-projet,
+    .factures .modal .modal-dialog .modal-content .form-control {
+        font-size: 10px;
+        line-height: 22px;
+    }
+
+    .factures .modal .modal-dialog .modal-content .except {
+        padding: 0;
+        width: 90px;
+        margin: 0;
+    }
 }
