--- a/public/assets/css/liste-projet.css
+++ b/public/assets/css/liste-projet.css
@@ -40,6 +40,7 @@
 }
 
 .table>tbody>tr>td {
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
     border-left: 1px solid rgba(0, 0, 0, 0.16);
     border-top: none;
     border-bottom: none;
@@ -68,53 +69,10 @@
     color: #FFFFFF;
 }
 
-.infos-projets {
-    position: relative;
-    top: 0%;
-    width: 100%;
-    margin: 90px 0 100px;
-    padding: 0;
-    height: 100px;
-    background: #009EE2;
-    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 32px rgba(0, 0, 0, 0.16);
-}
-
-.infos-projets .rectangle-profil {
-    position: absolute;
-    top: 20%;
-    left: 6%;
-    width: 150px;
-    height: 150px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
-    border-radius: 20px;
-}
-
-.infos-projets .rectangle-profil .rectanggle-bleu {
-    position: absolute;
-    top: 6.5%;
-    left: 6.5%;
-    margin: auto;
-    width: 130px;
-    height: 130px;
-    background: #009EE2;
-    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
-    border-radius: 20px;
-}
-
-.infos-projets .rectangle-profil .rectanggle-bleu img {
-    position: absolute;
-    top: 20%;
-    /* margin: auto; */
-    left: 20%;
-    width: 80px;
-    height: 80px;
-    border-radius: 50px;
-}
 
 .infos-projet h1 {
     width: 100%;
-    margin: -50px auto 20px auto;
+    margin: 80px auto 20px auto;
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 700;
@@ -196,24 +154,8 @@
         margin-left: 0;
     }
 
-    .infos-projets .rectangle-profil {
-        left: 4%;
-        width: 115px;
-        height: 115px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu {
-        margin: auto;
-        width: 100px;
-        height: 100px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu img {
-        width: 60px;
-        height: 60px;
-    }
-
     .infos-projet h1 {
+        margin: 0px auto 0px auto;
         font-weight: 700;
         font-size: 25px;
         line-height: 30px;
@@ -228,28 +170,20 @@
         font-size: 12px;
         line-height: 18px;
     }
+
+    .pro .infos-projet {
+        margin-top: 50px;
+    }
+
+    .table>tbody>tr>td img {
+        width: 20px;
+    }
 }
 
 @media(max-width: 600px) {
-    .infos-projets .rectangle-profil {
-        width: 100px;
-        height: 100px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu {
-        left: 8%;
-        margin: auto;
-        width: 85px;
-        height: 85px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu img {
-        width: 50px;
-        height: 50px;
-    }
 
     .infos-projet h1 {
-        margin: -50px auto 20px;
+        margin: 60px auto 20px;
         font-size: 20px;
         line-height: 25px;
     }
@@ -278,33 +212,6 @@
         margin: 270px 0 0 10px;
     }
 
-    .infos-projets {
-        margin: 65px 0 100px;
-        padding: 0;
-        height: 50px;
-    }
-
-    .infos-projets .rectangle-profil {
-        width: 60px;
-        left: 8%;
-        height: 60px;
-        border-radius: 10px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu {
-        left: 8.5%;
-        top: 8%;
-        margin: auto;
-        width: 50px;
-        height: 50px;
-        border-radius: 10px;
-    }
-
-    .infos-projets .rectangle-profil .rectanggle-bleu img {
-        width: 30px;
-        height: 30px;
-    }
-
     .nouveau-projet {
         padding: 10px;
         font-size: 15px;
@@ -312,21 +219,20 @@
     }
 
     .infos-projet h1 {
-        margin: -50px auto 40px;
+        margin: 60px auto 40px;
         font-size: 15px;
         line-height: 20px;
     }
 
     .table>thead>tr>th,
     .table>tbody>tr>td {
-        padding: auto 2px;
         font-size: 10px;
         line-height: 12px;
     }
 
     .pagination li,
     .nouveau-projet {
-        font-size: 12px;
+        font-size: 10px;
         padding: 5px;
         margin-left: 0;
         margin-bottom: 40px;
@@ -356,13 +262,5 @@
         padding: 0;
         width: 90px;
         margin: 0;
-    }
-}
-
-@media (max-width: 400px) {
-    .infos-projets {
-        margin: 58px 0 100px;
-        padding: 0;
-        height: 50px;
     }
 }
