--- a/public/assets/css/dashbord.css
+++ b/public/assets/css/dashbord.css
@@ -8,6 +8,7 @@
     text-decoration: none;
     font-family: 'Ubuntu', sans-serif;
 }
+
 .sidebar{
     width: 300px;
     position: fixed;
@@ -335,7 +336,8 @@ main h1{
 
     }
     .main-content main{
-        margin: 50px 30px 0 30px;
+      padding: 4rem 0rem;
+      margin: 50px 30px 0 30px;
     }
     .main-content main h1{
         font-size: 14px ;
