--- a/public/assets/css/factures.css
+++ b/public/assets/css/factures.css
@@ -1,24 +1,24 @@
-.table-responsive {
+.factures .table-responsive {
     height: 100%;
 }
 
-.input {
+.factures .input {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
-    text-align: center;
     background: #009EE2;
     height: 50px;
+    padding-right: 80px;
 }
 
-.input input {
+.factures .input input {
     border: none;
     height: 30px;
     text-align: center;
     border-radius: 15px;
 }
 
-.table-responsive .table thead tr th {
+.factures .table-responsive .table thead tr th {
     font-family: 'Ubuntu';
     font-size: 20px;
     font-weight: 400;
@@ -28,20 +28,20 @@
     background: none;
 }
 
-.table-responsive .table thead {
+.factures .table-responsive .table {
     border: 1px solid #9A9EA3;
 }
 
-.table-responsive .table thead tr th,
-.table-responsive .table tbody tr td {
+.factures .table-responsive .table thead tr th,
+.factures .table-responsive .table tbody tr td {
     vertical-align: middle;
     border-top: none;
     border-right: 1px solid #9A9EA3;
     border-left: 1px solid #9A9EA3;
 }
 
-.table-responsive .table tbody tr td button,
-.table-responsive .table tbody tr {
+.factures .table-responsive .table tbody tr td button,
+.factures .table-responsive .table tbody tr {
     font-family: 'Ubuntu';
     font-size: 15px;
     font-weight: 400;
@@ -50,21 +50,29 @@
     text-align: center;
 }
 
-.dataTables_paginate .pagination {
+.factures .dataTables_paginate .pagination {
     display: flex;
     justify-content: end;
     margin-top: 20px;
 }
 
 
-.table>tbody>tr>td img {
+.factures .table>tbody>tr>td img {
     width: 25px;
 }
 
-.main-content main .col-sm-12 .m-0 {
+.factures .main-content main .col-sm-12 .m-0 {
     margin: 30px 0 40px !important;
 }
-
+.factures .table-responsive  .row .col-sm-12,
+.factures .table-responsive  .dt-row .col-sm-12{
+ padding: 0;
+}
+.factures .table-responsive  .row,
+.factures .table-responsive  .dt-row {
+ margin: 0;
+ width: 100%;
+}
 .factures .modal .modal-dialog {
     display: flex;
     background: #7f3c3c;
@@ -156,8 +164,9 @@
 }
 
 @media(max-width: 550px) {
-    .input {
+    .factures .input {
         height: 40px;
+        padding-right: 10px;
     }
 
     .input input {
@@ -170,17 +179,17 @@
         margin: 0 0 20px !important;
     }
 
-    .table-responsive .table thead tr th {
+    .factures .table-responsive .table thead tr th {
         font-size: 10px;
         line-height: 20px;
     }
 
-    .table-responsive .table tbody tr td button {
+    .factures .table-responsive .table tbody tr td button {
         padding: 2px;
     }
 
-    .table-responsive .table tbody tr td button,
-    .table-responsive .table tbody tr {
+    .factures .table-responsive .table tbody tr td button,
+    .factures .table-responsive .table tbody tr {
         font-size: 10px;
         line-height: 15px;
     }
