--- a/public/assets/css/dash_client.css
+++ b/public/assets/css/dash_client.css
@@ -11,7 +11,7 @@
 
 .infos h4 {
     text-align: right;
-    padding: 25px 0;
+    padding: 25px 10px;
     font-family: 'Manrope';
     font-style: Light;
     font-weight: 700;
@@ -270,7 +270,7 @@
     }
 
     .infos h4 {
-        padding: 25px 0;
+        padding: 25px 10px;
         font-size: 28px;
         line-height: 30px;
     }
@@ -483,7 +483,7 @@
     }
 
     .infos h4 {
-        padding: 15px 0;
+        padding: 15px 10px;
         font-size: 15px;
         line-height: 20px;
     }
