--- a/public/assets/css/dashbord.css
+++ b/public/assets/css/dashbord.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -9,7 +9,7 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
-.sidebar{
+.sidebar {
     width: 300px;
     position: fixed;
     height: 100%;
@@ -19,113 +19,121 @@
     z-index: 100;
     transition: width 300ms;
 }
-.sidebar-brand{
+
+.sidebar-brand {
     display: flex;
     justify-content: center;
     height: 60px;
-margin: 0;
+    margin: 0;
     padding: 5px;
-   }
+}
 
-   /* .sidebar-brand .logo{
+/* .sidebar-brand .logo{
     padding: 5px;
    } */
-.search-wrapper{
-
-margin: auto;
+.search-wrapper {
+    margin: auto;
     border: 1px solid #009EE2;
     border-radius: 30px;
     background-color: #009EE2;
     height: 26px;
     color: #fff;
- width: 60%;
+    width: 60%;
     display: flex;
     align-items: center;
     overflow: hidden;
 }
-.search-wrapper img{
-   display: inline-block;
+
+.search-wrapper img {
+    display: inline-block;
     margin-left: 20px;
     font-size: 14px;
     margin-bottom: 5px;
     margin-right: 0.5rem;
     padding-top: 10px;
 }
-.search-wrapper input{
-     height: 100%;
-     width: 100%;
-     border: none;
-     outline: none;
-     color: #fff;
-     background-color: #009EE2;
- }
- .search-wrapper input::placeholder{
+
+.search-wrapper input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    background-color: #009EE2;
+}
+
+.search-wrapper input::placeholder {
     color: #FFFFFF40;
 }
- .nav1 .nav-item{
+
+.nav1 .nav-item {
     padding: 0;
     margin: 0;
- }
- .nav1{
+}
+
+.nav1 {
     display: none;
-  list-style: none;
+    list-style: none;
     background-color: #009EE2;
     border-radius: 20px;
- }
+}
 
-
-  .nav-item.open .nav1 {
+.nav-item.open .nav1 {
     display: block;
-  }
+}
 
-
- .nav1 .nav-link{
+.nav1 .nav-link {
     color: #fff;
     font-size: 15px;
+}
 
- }
- .sidebar-menu ul{
+.sidebar-menu ul {
     padding: 0;
+}
 
- }
- .open .fas img {
-    transform: rotate(180deg);
-    float: right;
+.fa img {
     width: 25px;
     height: 25px;
 }
- /* .fas1 {
+
+.open i img {
+    transform: rotate(180deg);
+    width: 25px;
+    height: 25px;
+}
+
+/* .fas1 {
     padding-top: 10px;
-
  } */
-
-.sidebar-menu li{
+.sidebar-menu li {
     text-decoration: none;
     width: 100%;
     padding-left: 2rem;
+}
 
- }
- .sidebar-menu a{
-   display: block;
-   color: black;
-   font-size: 18px;
- }
- .sidebar-menu {
+.sidebar-menu a {
+    display: block;
+    color: black;
+    font-size: 18px;
+}
+
+.sidebar-menu {
     text-decoration: none !important;
     margin-right: 30px;
     margin-top: 5px;
     height: auto;
-  }
-  .sidebar-menu a p:first-child{
+}
+
+.sidebar-menu a p:first-child {
     font-size: 18px;
+}
 
-  }
-
-.main-content{
+.main-content {
     transition: margin-left 300ms;
     margin-left: 300px;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
     padding: 1rem 1.5rem;
@@ -137,65 +145,81 @@ header{
     z-index: 100;
     transition: width 300ms;
 }
-#nav-toggle{
+
+#nav-toggle {
     display: none;
 }
-#nav-toggle:checked + .sidebar {
+
+#nav-toggle:checked+.sidebar {
     width: 70px;
     height: auto;
 }
-#nav-toggle:checked + .sidebar .sidebar-brand {
+
+#nav-toggle:checked+.sidebar .sidebar-brand {
     margin-right: 0;
     padding: 5px;
     padding-left: 0;
 }
-#nav-toggle:checked + .sidebar .logo{
 
+#nav-toggle:checked+.sidebar .logo {
     height: auto;
     padding: 0;
 }
-#nav-toggle:checked + .sidebar .sidebar-menu, #nav-toggle:checked + .sidebar .search-wrapper, #nav-toggle:checked + .sidebar .search-wrapper img {
-    display: none;
 
+#nav-toggle:checked+.sidebar .sidebar-menu,
+#nav-toggle:checked+.sidebar .search-wrapper,
+#nav-toggle:checked+.sidebar .search-wrapper img {
+    display: none;
 }
-.cards{
+
+.cards {
     margin: 0;
 }
-#nav-toggle:checked + .sidebar .sidebar-brand, #nav-toggle:checked + .sidebar li {
+
+#nav-toggle:checked+.sidebar .sidebar-brand,
+#nav-toggle:checked+.sidebar li {
     padding-left: 1rem;
 }
-#nav-toggle:checked + .sidebar li a{
+
+#nav-toggle:checked+.sidebar li a {
     padding-left: 0rem;
 }
-#nav-toggle:checked ~ .main-content  {
+
+#nav-toggle:checked~.main-content {
     margin-left: 0;
 }
-#nav-toggle:checked ~ .main-content header{
+
+#nav-toggle:checked~.main-content header {
     width: calc(100% - 70px);
     left: 70px;
 }
-.main-content{
+
+.main-content {
     transition: margin-left 300ms;
     margin-left: 300px;
 }
-header .nav2 {
 
+header .nav2 {
     font-size: 16px;
     color: #009EE2;
 }
-header .nav2 a{
+
+header .nav2 a {
     text-decoration: none;
     color: #009EE2;
 }
-main{
+
+main {
     margin-top: 50px;
     padding: 2rem 1.5rem;
     min-height: calc(100vh - 90px);
 }
-main h1{
-   font-size: 18px;
+
+main h1 {
+    font-size: 18px;
     color: #009EE2;
 }
+
 .cards {
     display: grid;
     align-items: center;
@@ -203,168 +227,185 @@ main h1{
     grid-gap: 2rem;
     margin-top: 1rem;
 }
-.card-single{
+
+.card-single {
     width: 200px;
     background: #009EE2;
     padding: 20px;
     border-radius: 10px;
 }
-.card-single h4{
+
+.card-single h4 {
     font-size: 16px;
     color: #fff;
     display: flex;
     justify-content: center;
 }
-.card-single h3{
+
+.card-single h3 {
     font-size: 16px;
     color: #000;
     display: flex;
     justify-content: center;
 }
-.contenu{
-   padding: 20px;
 
+.contenu {
+    padding: 20px;
 }
-@media (max-width: 991px){
-    #nav-toggle:checked + .sidebar .sidebar-menu {
+
+@media (max-width: 991px) {
+    #nav-toggle:checked+.sidebar .sidebar-menu {
         display: block;
     }
-    #nav-toggle:checked + .sidebar  {
+
+    #nav-toggle:checked+.sidebar {
         display: block;
         width: 240px;
         height: 100%;
     }
 
-    #nav-toggle:checked ~ .main-content header .none   {
+    #nav-toggle:checked~.main-content header .none {
         display: none;
     }
-    #nav-toggle:checked + .sidebar  .sidebar-brand{
-       padding: 5px;
+
+    #nav-toggle:checked+.sidebar .sidebar-brand {
+        padding: 5px;
     }
-    #nav-toggle:checked + .sidebar  .search-wrapper{
+
+    #nav-toggle:checked+.sidebar .search-wrapper {
         display: block;
-     align-items: center;
+        align-items: center;
         display: flex;
         justify-content: center;
     }
-    #nav-toggle:checked + .sidebar  .search-wrapper img{
+
+    #nav-toggle:checked+.sidebar .search-wrapper img {
         display: block;
         color: #fff;
     }
-    #nav-toggle:checked + .sidebar  .sidebar-menu{
+
+    #nav-toggle:checked+.sidebar .sidebar-menu {
         display: flex;
         justify-content: center;
         margin: 0;
-     }
+    }
+
     .sidebar .sidebar-menu {
         display: none;
     }
 
-    .sidebar{
-       width: 60px;
+    .sidebar {
+        width: 60px;
         height: auto;
     }
-    .search-wrapper{
+
+    .search-wrapper {
         display: none;
         font-size: 12px;
     }
-    header{
-        padding: 18px  10px 18px 10px;
+
+    header {
+        padding: 18px 10px 18px 10px;
         left: 60px;
         justify-content: none;
         width: calc(100% - 60px);
     }
-    .sidebar-brand{
+
+    .sidebar-brand {
         margin-right: 0;
     }
-    .main-content main{
+
+    .main-content main {
         left: 0;
     }
-    #nav-toggle:checked ~ .main-content header{
+
+    #nav-toggle:checked~.main-content header {
         width: calc(100% - 240px);
         left: 240px;
         display: flex;
-       justify-content: end;
+        justify-content: end;
     }
 
-    .main-content{
-
+    .main-content {
         margin-left: 0;
     }
-
 }
+
 @media (max-width: 500px) {
-
     header {
-       padding: 18px 5px;
+        padding: 18px 5px;
     }
-    .main-content{
+
+    .main-content {
         margin-left: 0;
-
     }
 
-    header .nav2 a{
-
+    header .nav2 a {
         font-size: 12px !important;
     }
 
-    .sidebar-menu li{
+    .sidebar-menu li {
         text-decoration: none;
         width: 100%;
         padding-left: 1rem;
+    }
 
-     }
-     .sidebar-menu a{
+    .sidebar-menu a {
+        font-size: 14px;
+    }
 
-       font-size: 14px;
-     }
-     .sidebar-menu {
+    .sidebar-menu {
         text-decoration: none !important;
         margin-right: 20px;
         margin-top: 15px;
-      }
-      .nav1 .nav-link p{
+    }
+
+    .nav1 .nav-link p {
         color: #fff;
         font-size: 14px !important;
+    }
 
-     }
-
-     #nav-toggle:checked + header .nav2 a{
+    #nav-toggle:checked+header .nav2 a {
         margin-right: 0;
         padding-right: 0;
         font-size: 8px !important;
+    }
 
+    .main-content main {
+        padding: 3rem 0rem;
+        margin: 50px 30px 0 30px;
     }
-    .main-content main{
-      padding: 4rem 0rem;
-      margin: 50px 30px 0 30px;
+
+    .main-content main h1 {
+        font-size: 14px;
     }
-    .main-content main h1{
-        font-size: 14px ;
-    }
+
     .cards {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1rem;
         margin-top: 1rem;
     }
-    .card-single{
 
+    .card-single {
         background: #009EE2;
         padding: 5px;
         border-radius: 10px;
     }
-    .card-single h4{
+
+    .card-single h4 {
         font-size: 14px;
         color: #fff;
         display: flex;
         justify-content: center;
     }
-    .card-single h3{
+
+    .card-single h3 {
         font-size: 14px;
         color: #000;
     }
-    .contenu{
-       padding: 30px;
+
+    .contenu {
+        padding: 30px;
     }
 }
