--- a/public/assets/css/liste_utilisateur.css
+++ b/public/assets/css/liste_utilisateur.css
@@ -1,6 +1,15 @@
 .liste_utlisateurs .table-responsive {
     height: 100%;
 }
+.liste_utlisateurs h1 {
+    font-family: 'Ubuntu';
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    margin: 50px 0;
+}
 
 .liste_utlisateurs .table-responsive .table thead tr th {
     font-family: 'Ubuntu';
@@ -48,4 +57,10 @@
 .liste_utlisateurs .table-responsive  .dt-row {
  margin: 0;
  width: 100%;
+}
+
+@media(max-width: 600px) {
+    .liste_utlisateurs h1 {
+        margin: 0px 0 40px;
+    }
 }
