--- a/public/assets/css/dash_client.css
+++ b/public/assets/css/dash_client.css
@@ -2,7 +2,7 @@
     position: relative;
     top: 0%;
     width: 100%;
-    margin: 90px 0 100px;
+    margin: 70px 0 100px;
     padding: 0;
     height: 100px;
     background: #009EE2;
@@ -456,7 +456,7 @@
 
 @media(max-width: 550px) {
     .dash .infos {
-        margin: 65px 0 100px;
+        margin: 40px 0 100px;
         padding: 0;
         height: 50px;
     }
@@ -578,5 +578,11 @@
     .formulaire .bouton {
         font-size: 8px;
         line-height: 15px;
+    }
+}
+
+@media(max-width: 400px) {
+    .dash .infos {
+        margin: 35px 0 100px;
     }
 }
