--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -5,9 +5,11 @@
     background-color: #009EE2;
     color: #FFFFFF;
 }
+
 .bg .navbar .container-fluid {
     margin-top: 0;
 }
+
 .bg .navbar .container-fluid .navbar-brand {
     width: 50%;
 }
@@ -110,10 +112,25 @@
 }
 
 @media (max-width: 500px) {
+    .bg .navbar .container-fluid .profil .btn {
+        height: 40px;
+        padding: 5px;
+    }
+
+    .bg .navbar .container-fluid .profil .btn .burger {
+        color: #009EE2;
+        height: 15px;
+    }
+
+    .bg .navbar .container-fluid .profil .btn .prof {
+        height: 30px;
+    }
+
     .bg .navbar .container-fluid .navbar-brand img {
         padding: 0 0 5px 0;
         width: 100px;
     }
+
     .bg .navbar .container .profil .btn {
         padding: 2px 10px 2px 10px;
         height: 35px;
@@ -126,10 +143,12 @@
     .bg .navbar .container .profil .btn .prof {
         height: 20px;
     }
+
     .navbar-expand-lg .navbar-collapse .langue span {
         font-size: 12px;
         line-height: 14px;
     }
+
     .navbar-expand-lg .navbar-collapse .langue {
         margin-right: 10px;
     }
@@ -140,13 +159,16 @@
         padding: 0;
         margin-top: 14px;
     }
+
     .dropdown-menu li {
         padding: 5px 0 5px 0;
     }
+
     .dropdown-menu li a {
         font-size: 12px;
         line-height: 14px;
     }
+
     .dropdown-menu li .gras {
         font-size: 15px;
         line-height: 20px;
