mise à jour accueil

--- a/public/assets/css/apropos.css
+++ b/public/assets/css/apropos.css
@@ -4,7 +4,6 @@
     display: block;
     background: #009EE2;
     color: #FFFFFF;
-    /* height: 600px; */
     position: relative;
     z-index: -1;
     padding: 100px 0 100px 0;
@@ -24,7 +23,6 @@
     background: none;
     border: none;
     display: flex;
-    /* justify-content: center; */
     align-items: flex-end;
 }
 
@@ -38,8 +36,6 @@
     font-weight: 400;
     font-size: 70px;
     line-height: 84px;
-    /* identical to box height, or 120% */
-
     display: flex;
     align-items: center;
     text-align: center;
@@ -52,13 +48,11 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 45px;
-    /* or 225% */
     margin: 60px 0 60px;
     display: flex;
     align-items: center;
     width: 90%;
     text-align: justify;
-
     color: #FFFFFF;
 }
 
@@ -67,7 +61,6 @@
     background: #FFFFFF;
     border-radius: 16px;
     width: 150px;
-
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 400;
@@ -109,10 +102,8 @@
     font-weight: 400;
     font-size: 40px;
     line-height: 45px;
-    /* or 112% */
     text-align: center;
     color: #000000;
-
     padding: 20px 0 20px 0;
 }
 
@@ -158,8 +149,6 @@
     background: none;
     border: none;
     display: flex;
-    /*     align-items: center;
-    justify-content: center; */
     align-items: flex-end;
 }
 
@@ -183,24 +172,19 @@
     font-weight: 200;
     font-size: 25px;
     line-height: 45px;
-    /* or 225% */
-
     display: flex;
     align-items: center;
     text-align: justify;
-
     color: #000000;
 }
 
 
 .bloc3 .card .card-body .bt1 .btn,
 .bloc2 .card .card-body .bt1 .btn {
-
     box-sizing: border-box;
     color: #FFFFFF;
     border-radius: 16px;
     width: auto;
-
     font-family: 'Manrope';
     font-style: ExtraLight;
     font-weight: 200;
@@ -219,7 +203,6 @@
     background: #009EE2;
     margin: 50px 0 50px 0;
     padding: 100px 0 100px 0;
-    /* clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%); */
     clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
 }
 
@@ -236,7 +219,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 45px;
-    /* or 188% */
     width: 100%;
     color: #FFFFFF;
 }
@@ -251,7 +233,6 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 45px;
-    /* or 250% */
     text-align: right;
     color: #FFFFFF;
     width: 100%;
@@ -272,15 +253,12 @@
 
 .bloc6 p,
 .bloc5 p {
-
     margin: 0px 0 50px 0;
-
     font-family: 'Manroppe';
     font-style: Light;
     font-weight: 400;
     font-size: 36px;
     line-height: 45px;
-    /* or 125% */
     color: #000000;
     text-align: center;
 }
@@ -304,11 +282,8 @@
     font-weight: 200;
     font-size: 16px;
     line-height: 32px;
-    /* identical to box height, or 200% */
     letter-spacing: -0.02em;
-
     color: #FFFFFF;
-
 }
 
 .bloc6 .container {
@@ -320,7 +295,7 @@
 
 .bloc6 .container .card {
     border: none;
-    background:  none;
+    background: none;
     height: 150px;
     width: 150px;
     background-size: contain;
@@ -335,7 +310,6 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-    /* Blanc */
     color: #FFFFFF;
     padding: 45px 0;
 }
@@ -353,9 +327,7 @@
     font-weight: 700;
     font-size: 48px;
     line-height: 45px;
-    /* or 94% */
     text-align: center;
-
     color: #009EE2;
 }
 
@@ -365,9 +337,7 @@
     font-weight: 400;
     font-size: 36px;
     line-height: 45px;
-    /* or 125% */
     text-align: center;
-
     color: #009EE2;
 }
 
@@ -377,10 +347,7 @@
     font-weight: 200;
     font-size: 20px;
     line-height: 45px;
-    /* or 225% */
-
     text-align: center;
-
     color: #000000;
 }
 
@@ -390,13 +357,13 @@
 /* Bloc fondateurs */
 
 .containerm {
-    min-height: 50vh;
+    min-height: 25vh;
     overflow: hidden;
     width: 100%;
-    /*     padding: 2rem; */
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    margin-bottom: 50px;
 }
 
 .images {
@@ -409,7 +376,6 @@
     cursor: pointer;
     box-shadow: 0 0 25px 1px rgba(0, 0, 0, .3);
     transition: .5s;
-    /*     background-color: #555; */
     border-radius: 30px;
 }
 
@@ -422,7 +388,6 @@
     width: 500px;
     height: 500px;
     transform: translate(-140%, -50%);
-    /*     background-color: #009EE2; */
     background: linear-gradient(0deg, rgba(0, 158, 226, 0.8), rgba(0, 158, 226, 0.8)), url(.jpg);
     opacity: 0.8;
     border-radius: 50%;
@@ -431,10 +396,6 @@
 
 .images:hover:after {
     transform: translate(-50%, -50%)
-}
-
-.images:hover img {
-    /*     transform: translate(-50%, -50%) scale(1.3) rotate(20deg) */
 }
 
 .images img {
@@ -453,9 +414,7 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 20px;
-    /* identical to box height, or 375% */
     text-align: center;
-
     width: 100%;
     color: #FFFFFF;
 }
@@ -467,9 +426,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 25px;
-    /* or 225% */
     text-align: center;
-
     color: #FFFFFF;
 }
 
@@ -513,7 +470,6 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 32px;
-    /* identical to box height, or 114% */
     color: #FFFFFF;
 }
 
@@ -523,10 +479,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    /* or 130% */
-
     text-align: justify;
-
     color: #394149;
 }
 
@@ -536,8 +489,6 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 32px;
-    /* identical to box height, or 114% */
-
     color: #212121;
 }
 
@@ -547,12 +498,10 @@
     font-weight: 200;
     font-size: 20px;
     line-height: 26px;
-    /* or 130% */
-
     text-align: justify;
-
     color: #394149;
 }
+
 .accordion .accordion-item {
     width: 70%;
     margin-left: auto;
@@ -561,7 +510,6 @@
     font-family: 'Ubuntu';
     font-style: normal;
     border: none;
-/*     border-color: #009EE2; */
     box-shadow: 0px 2px 4px #009EE2;
 }
 
@@ -585,7 +533,6 @@
 .blocs {
     background-image: url('../images/Jokkolanté_KK.png');
     background-size: 60% 80%;
-/*     background-position: center; */
     background-repeat: no-repeat;
 }
 
@@ -649,6 +596,10 @@
         padding-top: 0px;
     }
 
+    .a-propos .bloc1 {
+        margin-top: 0;
+    }
+
 }
 
 @media (max-width: 900px) {
@@ -656,6 +607,10 @@
     .bloc1 .card .card-body .card-title {
         font-size: 50px;
         line-height: 64px;
+    }
+
+    .a-propos .bloc1 {
+        margin-top: 0;
     }
 
     .bloc4 .col-md-12 {
@@ -767,9 +722,6 @@
         height: 100%;
     }
 
-    /* .bloc7 p {
-        margin-bottom: 50px;
-    } */
     .bloc7 h5 {
         margin-top: 20px;
     }
@@ -802,9 +754,8 @@
         font-size: 15px;
     }
 
-    /*     .bloc2,
-    .bloc3 */
-    .bloc1 {
+    .a-propos .bloc1 {
+        margin-top: 0;
         padding: 50px 0 50px 0;
     }
 
@@ -841,12 +792,6 @@
         position: relative;
         margin: 0;
     }
-
-    /*     .bloc3 .card .card-body .card-text,
-    .bloc2 .card .card-body .card-text {
-        position: relative;
-        width: 100%;
-    } */
 
     .bloc3 .col-md-6 img,
     .bloc2 .col-md-6 img {
