--- a/public/assets/css/apropos.css
+++ b/public/assets/css/apropos.css
@@ -329,9 +329,10 @@
     line-height: 45px;
     text-align: center;
     color: #009EE2;
+    margin-bottom: 50px;
 }
 
-.bloc7 h5 {
+.bloc8 h5 {
     font-family: 'Manrope';
     font-style: ExtraLight;
     font-weight: 400;
@@ -341,7 +342,7 @@
     color: #009EE2;
 }
 
-.bloc7 h6 {
+.bloc8 h6 {
     font-family: 'Manrope';
     font-style: ExtraLight;
     font-weight: 200;
@@ -366,7 +367,22 @@
     margin-bottom: 50px;
 }
 
-.images {
+.bloc7 .containerm .dan {
+    background-image: url('../images/dans.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .aw {
+    background-image: url('../images/ous.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .ch {
+    background-image: url('../images/ch.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .images {
     overflow: hidden;
     height: 300px;
     width: 240px;
@@ -376,39 +392,45 @@
     cursor: pointer;
     box-shadow: 0 0 25px 1px rgba(0, 0, 0, .3);
     transition: .5s;
-    border-radius: 30px;
+    border-radius: 25px;
 }
 
-.images:after {
+.bloc7 .containerm .images:after {
     content: '';
     position: absolute;
     z-index: 1;
     top: 50%;
     left: 50%;
-    width: 500px;
-    height: 500px;
-    transform: translate(-140%, -50%);
-    background: linear-gradient(0deg, rgba(0, 158, 226, 0.8), rgba(0, 158, 226, 0.8)), url(.jpg);
-    opacity: 0.8;
-    border-radius: 50%;
+    height: 300px;
+    width: 240px;
+    /*     transform: translate(-100%, -150%); */
+    transform: translate(-50%, 100%);
+    /* background: linear-gradient(0deg, rgba(0, 158, 226, 0.8), rgba(0, 158, 226, 0.8)), url(.jpg); */
+    opacity: 1;
+    /* border-radius: 50%; */
     transition: .8s
 }
 
-.images:hover:after {
+.bloc7 .containerm .dan::after {
+    background-image: url('../images/dans1.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .aw::after {
+    background-image: url('../images/ous1.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .ch::after {
+    background-image: url('../images/ch1.svg');
+    background-size: cover;
+}
+
+.bloc7 .containerm .images:hover:after {
     transform: translate(-50%, -50%)
 }
 
-.images img {
-    position: absolute;
-    height: 100%;
-    width: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .8s
-}
-
-.images span {
+.bloc7 .containerm .images span {
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
@@ -419,7 +441,7 @@
     color: #FFFFFF;
 }
 
-.images p {
+.bloc7 .containerm .images p {
     width: 100%;
     font-family: 'Ubuntu';
     font-style: normal;
@@ -430,18 +452,18 @@
     color: #FFFFFF;
 }
 
-.images p {
+.bloc7 .containerm .images p {
     top: 70%;
     left: 50%;
 }
 
-.images span {
+.bloc7 .containerm .images span {
     top: 80%;
     left: 50%;
 }
 
-.images span,
-.images p {
+.bloc7 .containerm .images span,
+.bloc7 .containerm .images p {
     position: absolute;
     z-index: 2;
     transform: translate(-2000px, -50%);
@@ -450,8 +472,8 @@
     transition-timing-function: ease-in
 }
 
-.images:hover p,
-.images:hover span {
+.bloc7 .containerm .images:hover p,
+.bloc7 .containerm .images:hover span {
     transform: translate(-50%, -50%);
     transition-timing-function: ease
 }
@@ -651,22 +673,48 @@
 
 @media (max-width: 770px) {
     .containerm {
-        min-height: 20vh;
+        display: flex;
+    }
+
+    .bloc7 .containerm .images span {
+        font-size: 8px;
+        line-height: 15px;
+        margin-top: 10px
+    }
+
+    .bloc7 .containerm .images p {
+        font-size: 12px;
+        margin: 0;
+        line-height: 10px;
+    }
+
+    .a-propos .container-fluid {
+        margin: 0;
     }
 
     .bloc7 {
-        margin: 50px 0 0px 0;
         display: flex;
         align-items: center;
     }
 
-    .bloc7 h5,
+    .bloc7 .row {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+    }
+
+    .bloc8 h5,
     .bloc2 p,
     .bloc5 p,
     .bloc6 p,
     .bloc7 p {
         font-size: 25px;
         line-height: 34px;
+    }
+
+    .bloc7 p {
+        margin: 20px 0;
     }
 
     .bloc1 .card .card-body .card-title {
@@ -710,40 +758,49 @@
         padding-bottom: 20px;
     }
 
-    .images {
-        width: 200px;
-        height: 250px;
-        margin: 50px auto 50px;
-        border-radius: 25px;
+    .bloc7 .containerm .images {
+        margin: 20px 5px;
     }
 
-    .images img {
+    .bloc7 .containerm .images:after,
+    .bloc7 .containerm .images {
+        width: 148px;
+        height: 185px;
+        border-radius: 18px;
+    }
+
+    /* .images img {
         width: 100%;
         height: 100%;
-    }
+    } */
 
-    .bloc7 h5 {
+    .bloc8 h5 {
         margin-top: 20px;
     }
 }
 
 @media (max-width: 500px) {
-    .images span {
-        font-size: 5px;
+    .bloc7 .containerm .images span {
+        margin: 0;
+        font-size: 8px;
         line-height: 10px;
     }
 
-    .images p {
-        font-size: 6px;
-        line-height: 100px;
+    .bloc7 .containerm .images p {
+        font-size: 10px;
+        line-height: 10px;
     }
 
     .containerm {
-        min-height: 10vh;
+        display: block;
+        margin-bottom: 0;
     }
 
     .containerm .col-md-4 {
-        width: 33%;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
     }
 
     .accordion-item .accordion-header .accordion-button {
@@ -777,7 +834,7 @@
         margin-right: auto;
     }
 
-    .bloc7 h6,
+    .bloc8 h6,
     .bloc4 h5,
     .bloc4 p,
     .bloc3 .card .card-body .card-text,
@@ -815,13 +872,12 @@
     .bloc6 .container .card p {
         font-size: 14px;
         line-height: 18px;
-        padding: 22px 0;
+        padding: 5px 0;
     }
 
     .bloc6 p,
     .bloc5 p {
-        margin-left: 0;
-        margin-right: 0;
+        margin: 20px 0;
         width: 100%;
     }
 
@@ -829,15 +885,15 @@
         width: 100%;
     }
 
-    .images {
-        width: 85px;
-        height: 105px;
-        margin: 20px auto 20px;
-        border-radius: 10px;
+    .bloc7 .containerm .images:after,
+    .bloc7 .containerm .images {
+        width: 180px;
+        height: 225px;
+        border-radius: 20px;
     }
 
-    .images img {
+    /* .images img {
         width: 100%;
         height: 100%;
-    }
+    } */
 }
